[project]
name = "comfyui-spinupart-custom"
description = "SpinUpArt custom nodes for ComfyUI: webhooks, base64 image conversion, word removal, and string templating"
version = "1.4.0"
license = { file = "LICENSE" }
dependencies = ["requests", "numpy", "pillow"]

[project.urls]
Repository = "https://github.com/douglasgrim/comfy-spinupart"

[tool.comfy]
PublisherId = "spinupart"
DisplayName = "SpinUpArt Custom Nodes"
Icon = ""
